Hoan thanh bai calcu va color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,10 @@
 
 <hr/>
 
-<app-pet></app-pet>
+<!--<app-pet></app-pet>-->
+
+<app-awesome-calculator></app-awesome-calculator>
+
+<hr/>
+
+<app-color-picker></app-color-picker>
